--- a/cnfg.ipynb
+++ b/cnfg.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "keyword can't be an expression (main.py, line 774)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/Users/tansu/Documents/work/git/local/pnts_tran/main.py\"\u001b[0;36m, line \u001b[0;32m774\u001b[0m\n\u001b[0;31m    resicntstemp = tdpy_util.retr_cart(resicnts, indxpixlrofi=globdata.globdata.indxpixlrofi, numbsideinpt=globdata.numbsideheal,                                                    globdata.minmlgal=globdata.minmlgal, globdata.maxmlgal=globdata.maxmlgal,                                                    globdata.minmbgal=globdata.minmbgal, globdata.maxmbgal=globdata.maxmbgal)\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m keyword can't be an expression\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# plotting\n",
     "import matplotlib as mpl\n",
@@ -68,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -139,8 +130,8 @@
     "              maxmnormback=None, \\\n",
     "              minmnormback=None, \\\n",
     "              \n",
-    "              nsidecart=None, \\\n",
-    "              nsideheal=None, \\\n",
+    "              numbsidecart=None, \\\n",
+    "              numbsideheal=None, \\\n",
     "              \n",
     "              # temp\n",
     "              maxmangleval=5., \\\n",
@@ -330,8 +321,8 @@
     "    ## flag to position mock point sources at the image center\n",
     "    cnfg['pntscntr'] = pntscntr\n",
     "    ## mock image resolution\n",
-    "    cnfg['nsidecart'] = nsidecart\n",
-    "    cnfg['nsideheal'] = nsideheal\n",
+    "    cnfg['numbsidecart'] = numbsidecart\n",
+    "    cnfg['numbsideheal'] = numbsideheal\n",
     "\n",
     "    # proposal frequencies\n",
     "    cnfg['probprop'] = probprop\n",
@@ -341,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -377,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -413,7 +404,7 @@
     "                         stdvback=0.1, \\\n",
     "                         datatype='mock', \\\n",
     "                         mocknumbpnts=array([100]), \\\n",
-    "                         nsideheal=256, \\\n",
+    "                         numbsideheal=256, \\\n",
     "                         makeplot=False, \\\n",
     "                         mockpsfntype='gausking', \\\n",
     "                         mocknormback=ones((2, 3)), \\\n",
@@ -432,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -474,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -486,7 +477,7 @@
     "                     modlpsfntype='singking', \\\n",
     "                     numbswep=1000000, \\\n",
     "                     plotperd=50000, \\\n",
-    "                     nsideheal=256, \\\n",
+    "                     numbsideheal=256, \\\n",
     "                     maxmgang=10., \\\n",
     "                     minmspec=array([1e-9, 1e-10, 1e-11]), \\\n",
     "                     maxmspec=array([1e-6, 1e-7, 1e-8]), \\\n",
@@ -509,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -558,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -601,7 +592,7 @@
     "                     expostrg='fermexpo_ngal_comp.fits', \\\n",
     "                     stdvback=0.1, \\\n",
     "                     datatype='mock', \\\n",
-    "                     nsideheal=256, \\\n",
+    "                     numbsideheal=256, \\\n",
     "                     mockfdfnslop=mockfdfnslop, \\\n",
     "                     mockfdfnnorm=array([10.]), \\\n",
     "                     mocknormback=ones((2, 5)), \\\n",
@@ -614,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -642,7 +633,7 @@
     "                     maxmnormback=array([1e3]), \\\n",
     "                     minmnormback=array([1e2]), \\\n",
     "                     maxmgang=30./3600., \\\n",
-    "                     nsidecart=100, \\\n",
+    "                     numbsidecart=100, \\\n",
     "                     margsize=2./3600., \\\n",
     "                     maxmangleval=10./3600., \\\n",
     "                     listbackfluxstrg=['sdssisotflux.fits'], \\\n",
@@ -658,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -702,11 +693,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PNTS_TRAN started at  05_02_2016_13_51_49\n",
+      "Initializing...\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "global name 'retr_globdata' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-0f7b9a546e55>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;31m#cnfg_ferm_expr_ngal('fermflux_ngal_full.fits', 'fermexpo_ngal_full.fits')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m     \u001b[0mcnfg_ferm_mock_ngal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-30-438f6a486c1e>\u001b[0m in \u001b[0;36mcnfg_ferm_mock_ngal\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mcnfg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mretr_cnfg\u001b[0m\u001b[0;34m(\u001b[0m                      \u001b[0mmodlpsfntype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'gausking'\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mnumbswep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m200000\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mplotperd\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m50000\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mtrueinfo\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mrandinit\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mmaxmgang\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m20.\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mcolrprio\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcolrprio\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mverbtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mindxevttincl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mindxenerincl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mmaxmnumbpnts\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m200\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mmocknumbpnts\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mprobprop\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mminmspec\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mminmspec\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mmaxmspec\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmaxmspec\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mregitype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'ngal'\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mmaxmnormback\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2.\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2.\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mminmnormback\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mlistbackfluxstrg\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'fermisotflux.fits'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'fermfdfmflux_ngal.fits'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mexpostrg\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'fermexpo_ngal_comp.fits'\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mstdvback\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mdatatype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'mock'\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mnumbsideheal\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m256\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mmockfdfnslop\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmockfdfnslop\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mmockfdfnnorm\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m10.\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mmocknormback\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mones\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m                      \u001b[0mmockpsfntype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'gausking'\u001b[0m\u001b[0;34m,\u001b[0m                     \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0mwrap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcnfg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/tansu/Documents/work/git/local/pnts_tran/main.py\u001b[0m in \u001b[0;36mwrap\u001b[0;34m(cnfg)\u001b[0m\n\u001b[1;32m    277\u001b[0m         \u001b[0;32mprint\u001b[0m \u001b[0;34m'Initializing...'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    278\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 279\u001b[0;31m     \u001b[0mglobdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrgfluxunit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mretr_globdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrgfluxunit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mglobdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexprtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    280\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    281\u001b[0m     \u001b[0;31m# number of bins\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: global name 'retr_globdata' is not defined"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == '__main__':\n",
     "    \n",
