--- a/samp.ipynb
+++ b/samp.ipynb
@@ -46,7 +46,7 @@
     "import os, time, sys, datetime, warnings, getpass, glob, fnmatch\n",
     "\n",
     "# tdpy\n",
-    "import tdpy_util\n",
+    "import tdpy_util.util\n",
     "\n",
     "# pnts_tran\n",
     "from pnts_tran.cnfg import *\n",
@@ -114,7 +114,8 @@
     "            print 'Sweep %d' % globdata.thisindxswep\n",
     "\n",
     "        thismakefram = (globdata.thisindxswep % plotperd == 0) and \\\n",
-    "            indxprocwork == int(float(globdata.thisindxswep) / globdata.numbswep * numbproc) and makeplot\n",
+    "            indxprocwork == int(float(globdata.thisindxswep) / globdata.numbswep * globdata.numbproc) \\\n",
+    "            and globdata.makeplot\n",
     "        globdata.reje = False\n",
     "    \n",
     "        # choose a proposal type\n",
@@ -142,12 +143,12 @@
     "        if thismakefram:\n",
     "            print\n",
     "            print 'Process %d is in queue for making a frame.' % indxprocwork\n",
-    "            if numbproc > 1:\n",
+    "            if globdata.numbproc > 1:\n",
     "                lock.acquire()\n",
     "            print 'Process %d started making a frame' % indxprocwork\n",
     "            plot_samp()\n",
     "            print 'Process %d finished making a frame' % indxprocwork\n",
-    "            if numbproc > 1:\n",
+    "            if globdata.numbproc > 1:\n",
     "                lock.release()\n",
     "            \n",
     "        # reject the sample if proposal is outside the prior\n",
@@ -264,7 +265,7 @@
     "\n",
     "        # log the progress\n",
     "        if verbtype > 0:\n",
-    "            thiscntr = tdpy_util.show_prog(globdata.thisindxswep, globdata.numbswep, \\\n",
+    "            thiscntr = tdpy_util.util.show_prog(globdata.thisindxswep, globdata.numbswep, \\\n",
     "                                           thiscntr, indxprocwork=indxprocwork)\n",
     "            \n",
     "            \n",
