--- a/plot.ipynb
+++ b/plot.ipynb
@@ -46,7 +46,7 @@
     "import os, time, sys, datetime, warnings, getpass, glob, fnmatch\n",
     "\n",
     "# tdpy\n",
-    "import tdpy_util\n",
+    "import tdpy_util.util\n",
     "\n",
     "# pnts_tran\n",
     "from pnts_tran.cnfg import *\n",
@@ -224,9 +224,9 @@
     "                    axis.axhline(-frambndr, ls='--', alpha=0.3, color='black')\n",
     "                    if not cumu:\n",
     "                        if h < 3 or full:\n",
-    "                            axis.set_title(tdpy_util.mexp(binsspec[i, h]) + ' $<$ ' + strgvarb + ' $<$ ' + tdpy_util.mexp(binsspec[i, h+1]))\n",
+    "                            axis.set_title(tdpy_util.util.mexp(binsspec[i, h]) + ' $<$ ' + strgvarb + ' $<$ ' + tdpy_util.util.mexp(binsspec[i, h+1]))\n",
     "                        else:\n",
-    "                            axis.set_title(tdpy_util.mexp(binsspec[i, h]) + ' $<$ ' + strgvarb)\n",
+    "                            axis.set_title(tdpy_util.util.mexp(binsspec[i, h]) + ' $<$ ' + strgvarb)\n",
     "            figr.savefig(plotpath + 'pntsbind' + ptag + '%d%d' % (l, indxenerincl[i]) + '_' + rtag + '.png')\n",
     "            plt.close(figr)\n",
     "       \n",
@@ -419,6 +419,7 @@
     "    plt.savefig(plotpath + 'datacntshist' + rtag + '.png')\n",
     "    plt.close(figr)\n",
     "    \n",
+    "    \n",
     "def plot_intr():\n",
     "    \n",
     "    with plt.xkcd():\n",
@@ -463,7 +464,7 @@
     "        heal = zeros(globdata.numbpixlheal)\n",
     "        heal[jpixlrofi] = healtemp\n",
     "\n",
-    "    cart = tdpy_util.retr_cart(heal, minmlgal=minmlgal, maxmlgal=maxmlgal, minmbgal=minmbgal, maxmbgal=maxmbgal)\n",
+    "    cart = tdpy_util.util.retr_cart(heal, minmlgal=minmlgal, maxmlgal=maxmlgal, minmbgal=minmbgal, maxmbgal=maxmbgal)\n",
     "    imag = plt.imshow(cart, origin='lower', cmap='Reds', extent=extt)\n",
     "    plt.colorbar(imag, fraction=0.05)\n",
     "    plt.title(titl)\n",
@@ -877,7 +878,7 @@
     "    else:\n",
     "        modlcntstemp = thismodlcnts[pener, :, pevtt]\n",
     "    if pixltype == 'heal':\n",
-    "        modlcntstemp = tdpy_util.retr_cart(modlcntstemp, jpixlrofi=jpixlrofi, nsideinpt=nsideheal, \\\n",
+    "        modlcntstemp = tdpy_util.util.retr_cart(modlcntstemp, jpixlrofi=jpixlrofi, nsideinpt=nsideheal, \\\n",
     "                                           minmlgal=minmlgal, maxmlgal=maxmlgal, \\\n",
     "                                           minmbgal=minmbgal, maxmbgal=maxmbgal)\n",
     "    else:\n",
@@ -947,7 +948,7 @@
     "    else:\n",
     "        resicntstemp = resicnts[pener, :, pevtt]\n",
     "    if pixltype == 'heal':\n",
-    "        resicntstemp = tdpy_util.retr_cart(resicntstemp, jpixlrofi=jpixlrofi, nsideinpt=nsideheal, \\\n",
+    "        resicntstemp = tdpy_util.util.retr_cart(resicntstemp, jpixlrofi=jpixlrofi, nsideinpt=nsideheal, \\\n",
     "                                           minmlgal=minmlgal, maxmlgal=maxmlgal, \\\n",
     "                                           minmbgal=minmbgal, maxmbgal=maxmbgal)\n",
     "    else:\n",
@@ -1030,7 +1031,7 @@
     "        errrcntstemp = errrcntsrofi[pener, :, pevtt]\n",
     "    \n",
     "    if pixltype == 'heal':\n",
-    "        errrcntstemp = tdpy_util.retr_cart(errrcntstemp, jpixlrofi=jpixlrofi, nsideinpt=nsideheal, \\\n",
+    "        errrcntstemp = tdpy_util.util.retr_cart(errrcntstemp, jpixlrofi=jpixlrofi, nsideinpt=nsideheal, \\\n",
     "                                           minmlgal=minmlgal, maxmlgal=maxmlgal, \\\n",
     "                                           minmbgal=minmbgal, maxmbgal=maxmbgal)\n",
     "    else:\n",
@@ -1155,7 +1156,7 @@
     "    figr, axis = plt.subplots()\n",
     "    datacnts = zeros(globdata.numbpixlheal)\n",
     "    datacnts[jpixlrofi] = datacnts[0,:,3]\n",
-    "    testcart = tdpy_util.retr_cart(datacnts, minmlgal=minmlgal, maxmlgal=maxmlgal, minmbgal=minmbgal, maxmbgal=maxmbgal)\n",
+    "    testcart = tdpy_util.util.retr_cart(datacnts, minmlgal=minmlgal, maxmlgal=maxmlgal, minmbgal=minmbgal, maxmbgal=maxmbgal)\n",
     "    imag = axis.imshow(testcart, origin='lower', cmap='Reds', extent=extt)\n",
     "    plt.colorbar(imag, ax=axis, fraction=0.05)\n",
     "    axis.scatter(mocklgal, mockbgal, c='g')\n",
@@ -1219,7 +1220,7 @@
     "                samp[indxlist[k][1]] = data[m]\n",
     "                llik[k, n, m] = retr_llik(samp)\n",
     "\n",
-    "        thiscntr = tdpy_util.show_prog(k, ncomb, thiscntr)\n",
+    "        thiscntr = tdpy_util.util.show_prog(k, ncomb, thiscntr)\n",
     "            \n",
     "    \n",
     "    llik *= 1e-7\n",
@@ -1287,8 +1288,8 @@
     "        hist1[k, :] *= 1. / sum(hist1[k, :]) / diffcnts\n",
     "        \n",
     "    \n",
-    "    totlcntscart0 = tdpy_util.retr_cart(totlcntsheal0[0, :], minmlgal=minmlgal, maxmlgal=maxmlgal, minmbgal=minmbgal, maxmbgal=maxmbgal)\n",
-    "    totlcntscart1 = tdpy_util.retr_cart(totlcntsheal1[0, :], minmlgal=minmlgal, maxmlgal=maxmlgal, minmbgal=minmbgal, maxmbgal=maxmbgal)\n",
+    "    totlcntscart0 = tdpy_util.util.retr_cart(totlcntsheal0[0, :], minmlgal=minmlgal, maxmlgal=maxmlgal, minmbgal=minmbgal, maxmbgal=maxmbgal)\n",
+    "    totlcntscart1 = tdpy_util.util.retr_cart(totlcntsheal1[0, :], minmlgal=minmlgal, maxmlgal=maxmlgal, minmbgal=minmbgal, maxmbgal=maxmbgal)\n",
     "    \n",
     "    fig = plt.figure(figsize=(12, 12))\n",
     "    axis = figr.add_subplot(221)\n",
@@ -1322,9 +1323,9 @@
     "    axis = figr.add_subplot(212)\n",
     "\n",
     "\n",
-    "    tdpy_util.plot_braz(ax, meancnts, hist0,  lcol='lightgreen', \\\n",
+    "    tdpy_util.util.plot_braz(ax, meancnts, hist0,  lcol='lightgreen', \\\n",
     "                        alpha=0.3, dcol='green', mcol='darkgreen', labl='Isotropic')\n",
-    "    tdpy_util.plot_braz(ax, meancnts, hist1, lcol='lightblue', \\\n",
+    "    tdpy_util.util.plot_braz(ax, meancnts, hist1, lcol='lightblue', \\\n",
     "                        alpha=0.3, dcol='blue', mcol='darkblue', labl='Isotropic + Unresolved PS')\n",
     "\n",
     "    axis.set_title('Count PDF')\n",
